Adds topical boxes

--- a/Resources/Prototypes/Catalog/VendingMachines/Inventories/medical.yml
+++ b/Resources/Prototypes/Catalog/VendingMachines/Inventories/medical.yml
@@ -10,5 +10,7 @@
     BoxBottle: 3
     ClothingEyesHudMedical: 2
     ClothingEyesEyepatchHudMedical: 2
-    ClothingEyesGlassesHudMedical: 2
-
+    TopicalBoxBlood: 1
+    TopicalBoxGauze: 1
+    TopicalBoxBurns: 1
+    TopicalBoxBrute: 1
