--- a/Resources/Audio/_Impstation/Effects/attributions.yml
+++ b/Resources/Audio/_Impstation/Effects/attributions.yml
@@ -19,6 +19,6 @@
   source: "https://freesound.org/s/415498/"
 
 - files: ["close_plastic_box"]
-  license: "CC BY-NC-4.0"
+  license: "CC-BY-NC-4.0"
   copyright: "Opening and closing DVD case by lorraine004"
   source: "https://freesound.org/s/767093/"
