fix stupid slashes smh

--- a/Resources/Prototypes/_Impstation/Entities/Objects/Tools/topical_boxes.yml
+++ b/Resources/Prototypes/_Impstation/Entities/Objects/Tools/topical_boxes.yml
@@ -29,10 +29,10 @@
       tags:
       - Bloodpack
   - type: Sprite
-    sprite: _Impstation\Objects\Storage\topical-boxes.rsi
+    sprite: _Impstation/Objects/Storage/topical-boxes.rsi
     state: topicalbox-1
   - type: Item
-    sprite: _Impstation\Objects\Storage\topical-boxes.rsi
+    sprite: _Impstation/Objects/Storage/topical-boxes.rsi
     heldPrefix: topicalbox-1
 
   - type: GenericVisualizer
@@ -54,10 +54,10 @@
       tags:
       - Gauze
   - type: Sprite
-    sprite: _Impstation\Objects\Storage\topical-boxes.rsi
+    sprite: _Impstation/Objects/Storage/topical-boxes.rsi
     state: topicalbox-2
   - type: Item
-    sprite: _Impstation\Objects\Storage\topical-boxes.rsi
+    sprite: _Impstation/Objects/Storage/topical-boxes.rsi
     heldPrefix: topicalbox-2
   - type: GenericVisualizer
     visuals:
@@ -78,10 +78,10 @@
       tags:
       - Ointment
   - type: Sprite
-    sprite: _Impstation\Objects\Storage\topical-boxes.rsi
+    sprite: _Impstation/Objects/Storage/topical-boxes.rsi
     state: topicalbox-3
   - type: Item
-    sprite: _Impstation\Objects\Storage\topical-boxes.rsi
+    sprite: _Impstation/Objects/Storage/topical-boxes.rsi
     heldPrefix: topicalbox-3
   - type: GenericVisualizer
     visuals:
@@ -102,10 +102,10 @@
       tags:
       - Brutepack
   - type: Sprite
-    sprite: _Impstation\Objects\Storage\topical-boxes.rsi
+    sprite: _Impstation/Objects/Storage/topical-boxes.rsi
     state: topicalbox-4
   - type: Item
-    sprite: _Impstation\Objects\Storage\topical-boxes.rsi
+    sprite: _Impstation/Objects/Storage/topical-boxes.rsi
     heldPrefix: topicalbox-4
   - type: GenericVisualizer
     visuals:
