--- a/Resources/Prototypes/_Impstation/Entities/Objects/Tools/topical_boxes.yml
+++ b/Resources/Prototypes/_Impstation/Entities/Objects/Tools/topical_boxes.yml
@@ -77,6 +77,7 @@
     whitelist:
       tags:
       - Ointment
+      - Aloe
   - type: Sprite
     sprite: _Impstation/Objects/Storage/topical-boxes.rsi
     state: topicalbox-3
