deconversion system patches

--- a/Resources/Prototypes/Reagents/medicine.yml
+++ b/Resources/Prototypes/Reagents/medicine.yml
@@ -1099,6 +1099,10 @@
         factor: 3
     Medicine:
       effects:
+      - !type:CleanseCorruption
+        conditions:
+        - !type:ReagentThreshold
+          min: 15
       - !type:HealthChange
         conditions:
         - !type:TotalDamage
