fix grey organs... and im so so sorry but lungs cannot be in their head.. For now, maybe

--- a/Resources/Prototypes/_Impstation/Body/Organs/gray.yml
+++ b/Resources/Prototypes/_Impstation/Body/Organs/gray.yml
@@ -22,11 +22,10 @@
           Quantity: 5
   - type: FlavorProfile
     flavors:
-      - people
-  - type: Tag # goob edit
+    - people
+  - type: Tag
     tags:
     - Meat
-    - Organ
 
 - type: entity
   id: BaseGrayOrgan
@@ -44,6 +43,7 @@
   - type: Sprite
     state: brain
   - type: Organ
+    slotId: brain # Shitmed Change
   - type: Input
     context: "ghost"
   - type: Brain
@@ -51,11 +51,11 @@
   - type: Examiner
   - type: BlockMovement
   - type: BadFood
-  - type: Tag # goob edit
+  - type: Food # DeltaV: Prevent eating brains as borgs don't remember what happened to them
+    requiredStomachs: 20
+  - type: Tag
     tags:
     - Meat
-    - Organ
-    - Brain
   - type: SolutionContainerManager
     solutions:
       organ:
@@ -69,11 +69,14 @@
           Quantity: 5
   - type: FlavorProfile
     flavors:
-      - people
+    - people
   - type: FoodSequenceElement
     entries:
       Burger: Brain
       Taco: Brain
+  - type: Item
+    size: Small
+    heldPrefix: brain
 
 - type: entity
   id: OrganGrayEyes
@@ -81,15 +84,16 @@
   name: shuui
   description: "Soulful."
   components:
+  - type: Organ # Shitmed Change
+    slotId: eyes # Shitmed Change
+  - type: Eyes # Shitmed Change
   - type: Sprite
     layers:
-      - state: eyeball-l
-      - state: eyeball-r
-  - type: Tag # goob edit
-    tags:
-    - Meat
-    - Organ
-    - Eyes
+    - state: eyeball-l
+    - state: eyeball-r
+  - type: Item
+    size: Small
+    heldPrefix: eyeballs
 
 - type: entity
   id: OrganGrayTongue
@@ -109,7 +113,6 @@
   - type: Sprite
     state: appendix
 
-
 - type: entity
   id: OrganGrayEars
   parent: BaseGrayOrgan
@@ -118,6 +121,7 @@
   components:
   - type: Sprite
     state: ears
+  - type: Ears # Shitmed Change
 
 - type: entity
   id: OrganGrayLungs
@@ -125,10 +129,15 @@
   name: cupod
   description: "Eugh..."
   components:
+  - type: Organ # Shitmed Change
+    slotId: lungs # Shitmed Change
   - type: Sprite
     layers:
-      - state: lung-l
-      - state: lung-r
+    - state: lung-l
+    - state: lung-r
+  - type: Item
+    size: Small
+    heldPrefix: lungs
   - type: Lung
   - type: Metabolizer
     removeEmpty: true
@@ -154,12 +163,6 @@
           Quantity: 5
   - type: Instrument
     program: 109
-  - type: Tag # goob edit
-    tags:
-    - Meat
-    - Organ
-    - Lungs
-    - WoodwindInstrument
 
 - type: entity
   id: OrganGrayHeart
@@ -167,6 +170,9 @@
   name: tumpii
   description: "You honestly have no idea what this does."
   components:
+  - type: Heart # Shitmed Change
+  - type: Organ # Shitmed Change
+    slotId: heart # Shitmed Change
   - type: Sprite
     state: heart-on
   # The heart 'metabolizes' medicines and poisons that aren't filtered out by other organs.
@@ -174,16 +180,14 @@
   # You're technically 'immune to poison' without a heart, but.. uhh, you'll have bigger problems on your hands.
   - type: Metabolizer
     maxReagents: 2
-    metabolizerTypes: [Human]
+    metabolizerTypes: [ Gray f]
     groups:
     - id: Medicine
     - id: Poison
     - id: Narcotic
-  - type: Tag # goob edit
-    tags:
-    - Meat
-    - Organ
-    - Heart
+  - type: Item
+    size: Small
+    heldPrefix: heart
 
 - type: entity
   id: OrganGrayStomach
@@ -191,8 +195,13 @@
   name: fuubu
   description: "Looks kind of appetizing."
   components:
+  - type: Organ # Shitmed Change
+    slotId: stomach # Shitmed Change
   - type: Sprite
     state: stomach
+  - type: Item
+    size: Small
+    heldPrefix: stomach
   - type: SolutionContainerManager
     solutions:
       stomach:
@@ -209,7 +218,7 @@
   - type: Metabolizer
     # mm yummy
     maxReagents: 3
-    metabolizerTypes: [Human]
+    metabolizerTypes: [ Human ]
     groups:
     - id: Food
     - id: Drink
@@ -220,11 +229,17 @@
   name: beobu
   description: "Jazee sipsun alcohol."
   components:
+  - type: Liver # Shitmed Change
+  - type: Organ # Shitmed Change
+    slotId: liver # Shitmed Change
   - type: Sprite
     state: liver
+  - type: Item
+    size: Small
+    heldPrefix: liver
   - type: Metabolizer # The liver metabolizes certain chemicals only, like alcohol.
     maxReagents: 1
-    metabolizerTypes: [Human]
+    metabolizerTypes: [ Human ]
     groups:
     - id: Alcohol
       rateModifier: 0.1 # removes alcohol very slowly along with the stomach removing it as a drink
@@ -235,19 +250,16 @@
   name: cube
   description: "A small, hard cube of an unidentifiable metal. It's warm to the touch, and pulsates faintly."
   components:
+  - type: Organ # Shitmed
+    slotId: kidneys
   - type: Sprite
-    state: kidney-r
+    layers:
+    - state: kidney-r
+  - type: Item
+    size: Small
+    heldPrefix: kidneys
   # The kidneys just remove anything that doesn't currently have any metabolisms, as a stopgap.
   - type: Metabolizer
     maxReagents: 5
-    metabolizerTypes: [Human]
+    metabolizerTypes: [ Human ]
     removeEmpty: true
-  - type: Tool
-    qualities:
-    - Pulsing
-  - type: Tag # goob edit
-    tags:
-    - Meat
-    - Organ
-    - Kidneys
-    - Multitool
