More impstation species specific fixes

--- a/Resources/Prototypes/_Impstation/Body/Organs/snail.yml
+++ b/Resources/Prototypes/_Impstation/Body/Organs/snail.yml
@@ -6,6 +6,7 @@
   - type: Sprite
     state: stomach
   - type: Organ
+    slotId: stomach
   - type: SolutionContainerManager
     solutions:
       stomach:
