--- a/Resources/Prototypes/_Impstation/Body/Parts/gray.yml
+++ b/Resources/Prototypes/_Impstation/Body/Parts/gray.yml
@@ -11,7 +11,7 @@
       reagents:
       - ReagentId: Fat
         Quantity: 3
-      - ReagentId: Blood
+      - ReagentId: Radium
         Quantity: 10
 
 - type: entity
@@ -27,7 +27,7 @@
       reagents:
       - ReagentId: Fat
         Quantity: 10
-      - ReagentId: Blood
+      - ReagentId: Radium
         Quantity: 20
 
 - type: entity
@@ -43,7 +43,7 @@
       reagents:
       - ReagentId: Fat
         Quantity: 5
-      - ReagentId: Blood
+      - ReagentId: Radium
         Quantity: 10
 
 - type: entity
