Decapoid lung fix, gastropod damage fix

--- a/Resources/Prototypes/_Impstation/Body/Prototypes/decapoid.yml
+++ b/Resources/Prototypes/_Impstation/Body/Prototypes/decapoid.yml
@@ -20,7 +20,7 @@
       - head
       organs:
         heart: OrganHumanHeart
-        gills: OrganDecapoidLungs
+        lungs: OrganDecapoidLungs
         liver: OrganHumanLiver
         kidneys: OrganHumanKidneys
         stomach: OrganHumanStomach
