vestine in syndiejuice

--- a/Resources/Prototypes/Catalog/VendingMachines/Inventories/chemvend.yml
+++ b/Resources/Prototypes/Catalog/VendingMachines/Inventories/chemvend.yml
@@ -50,6 +50,7 @@
     JugSugar: 3
     JugSulfur: 1
     JugWeldingFuel: 1
+    VestineChemistryVial: 1 #imp
   emaggedInventory:
     PaxChemistryBottle: 3
     MuteToxinChemistryBottle: 3
