Add tank harnesses to medical fabricator

--- a/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/Entities/Structures/Machines/lathe.yml
@@ -970,6 +970,7 @@
       - PrescriptionLens # imp
       - PrescriptionLensStrong # imp
       - BoneGel # Shitmed Change
+      - TankHarness # DeltaV
     dynamicRecipes:
       - ChemicalPayload
       - CryostasisBeaker
