--- a/Resources/Prototypes/_Impstation/Loadouts/loadout_groups.yml
+++ b/Resources/Prototypes/_Impstation/Loadouts/loadout_groups.yml
@@ -15,12 +15,11 @@
   loadouts:
   - LoadoutDecapoidClaw
 
-# the claw and tank but as StartingGear
+# Decapoid Vapor tank only
 - type: startingGear
-  id: StartingGearDecapoidClaw
+  id: StartingGearDecapoidVaporTank
   inhand:
     - DecapoidVaporTank
-    - DecapoidClawItem
 
 # the full internals setup for decapoids but as StartingGear
 - type: startingGear
@@ -29,7 +28,6 @@
     mask: DecapoidBreathingApparatus
   inhand:
     - DecapoidVaporTank
-    - DecapoidClawItem
 
 # The usual loadouts of the decapoid harness that spawn in your chest slot for jobs that don't have outerwear in their loadout
 - type: loadoutGroup
@@ -271,7 +269,7 @@
     id: MedicalPDA
     belt: ClothingBeltMedicalFilled
     outerClothing: ClothingOuterWinterMed
-    #head: 
+    #head:
     pocket1: EmergencyOxygenTankFilled
     pocket2: ClothingMaskBreath
     ears: ClothingHeadsetMedical
