Replace ForcedSleep with Anesthesia for surgery (#2684)
* Replace ForcedSleeping with Anesthesia for surgery checks

* Add Anesthesia to NO2, Nocturine, and ChloralHydrate

(cherry picked from commit 056c98c054e11c377195c39d859604d32559f009)

--- a/Resources/Prototypes/Entities/Mobs/Species/base.yml
+++ b/Resources/Prototypes/Entities/Mobs/Species/base.yml
@@ -138,6 +138,7 @@
     - RadiationProtection
     - Drowsiness
     - Adrenaline
+    - Anesthesia # DeltaV - Anesthesia
   - type: Body
     prototype: Human
     requiredLegs: 2
